--- a/index.html
+++ b/index.html
@@ -1,83 +1,13 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eLeOS-Dock</title>
-    <link rel="stylesheet" href="./main.css">
-</head>
-<body>
-    
-    <div class="dock">
-        <ul>
-            <li class="app">
-                <span class="appName">Mac OS</span>
-                <img class="icon" src="./assets/macOS.png">
-            </li>
-            <li class="app">
-                <span class="appName">Motivation</span>
-                <img class="icon" src="./assets/music.png">
-            </li>
-            <li class="app">
-                <span class="appName">Notion</span>
-                <img class="icon" src="./assets/notion.png">
-            </li>
-            <li class="app">
-                <span class="appName">Trello</span>
-                <img class="icon" src="./assets/trello.png">
-            </li>
-            <li class="app">
-                <span class="appName">Slack</span>
-                <img class="icon" src="./assets/slack.png">
-            </li>
-            <li class="app">
-                <span class="appName">Chat GPT</span>
-                <img class="icon" src="./assets/chatGPT.png">
-            </li>
-            <li class="app">
-                <span class="appName">Arc</span>
-                <img class="icon" src="./assets/arc.png">
-            </li>
-            <li class="app">
-                <span class="appName">Chrome</span>
-                <img class="icon" src="./assets/chrome.png">
-            </li>
-            <li class="app">
-                <span class="appName">VSCode</span>
-                <img class="icon" src="./assets/vsCode.png">
-            </li>
-            <li class="app">
-                <span class="appName">Terminal</span>
-                <img class="icon" src="./assets/terminal.png">
-            </li>
-            <li class="app">
-                <span class="appName">Figma</span>
-                <img class="icon" src="./assets/figma.png">
-            </li>
-            <li class="app">
-                <span class="appName">Acrobat Pro</span>
-                <img class="icon" src="./assets/acrobatPro.png">
-            </li>
-            <li class="app">
-                <span class="appName">Photoshop</span>
-                <img class="icon" src="./assets/photoshop.png">
-            </li>
-            <li class="app">
-                <span class="appName">Indesign</span>
-                <img class="icon" src="./assets/indesign.png">
-            </li>
-            <li class="app">
-                <span class="appName">Illustrator</span>
-                <img class="icon" src="./assets/illustrator.png">
-            </li>
-            <li class="app">
-                <span class="appName">Excel</span>
-                <img class="icon" src="./assets/excel.png">
-            </li>
-        </ul>
-    </div>
-
-
-
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DockOS React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
